se agregaron modulos de admin

--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -22,8 +22,8 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Más información</a>
             </li>
-            <li>
-              <a class="nav-link js-scroll-trigger" [routerLink]="['/login']">Login</a>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/login">Login</a>
             </li>
           </ul>
         </div>
