--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="middle-box text-center loginscreen  animated fadeInDown">
+<!--<div class="middle-box text-center loginscreen  animated fadeInDown">
   <div>
       <div>
           <h1 class="logo-name">PREMATE</h1>
@@ -22,4 +22,251 @@
       </form>
       <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
   </div>
+</div>-->
+
+<!--
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+            <div class="container">
+              <a class="navbar-brand js-scroll-trigger" href="#video"><img src="../../../assets/img/logos/premate-logo-cut.png" id="logopre"></a>
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#quienes_somos">¿Cómo te ayudamos?</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#testimonios">Testimonios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#beca">Beca</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Más información</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" [routerLink]="['/login']">Login</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        -->
+<nav-p [identity]="identity"></nav-p>
+
+<div class="container" id="header">
+    <div class="row"> 
+        <div class="col-lg-12"> 
+            <div class="jumbotron">
+                <h3>{{ title }}</h3>
+                <div class="col-md-12">
+                        <h3> </h3>
+                    
+                        <div class="identity-alert alert alert-success" *ngIf="identity && identity.sub">
+                            !Te has identificado correctamente! Bienvenido <strong>{{ identity.name }} </strong>
+                        </div>
+                    
+                        <div class="identity-alert alert alert-danger" *ngIf="identity && identity.data">
+                            !No te has identificado correctamente! 
+                        </div>
+                    
+                        <form #loginForm="ngForm" (ngSubmit)="onSubmit();" class="col-md-7 no-padding"> 
+                            <p>
+                                <label>RUT:</label>  
+                                <input type="rut" class="form-control" name="rut" #rut="ngModel" [(ngModel)]="user.rut" required>
+                            </p>
+                            <span *ngIf="!rut.valid && rut.touched">El email no es válido</span>
+                    
+                            <p>
+                                <label>Password:</label>  
+                                <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" required>
+                                <span *ngIf="!password.valid && password.touched">La contraseña no es válida</span>
+                            </p>
+                    
+                            <input type="submit" value="Entrar" class="btn btn-primary" [disabled]="!loginForm.form.valid">
+                    
+                        </form>
+                    </div>
+            </div>
+        </div>
+    </div>
 </div>
+<!--
+<div class="row">
+<div class="container">
+          <form class="form-horizontal" role="form" method="POST" action="/login">
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <h2>Please Login</h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group has-danger">
+                        <label class="sr-only" for="email">E-Mail Address</label>
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
+                            <input type="text" name="email" class="form-control" id="email"
+                                   placeholder="you@example.com" required autofocus>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-control-feedback">
+                        <span class="text-danger align-middle">
+                            <i class="fa fa-close"></i> Example error message
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label class="sr-only" for="password">Password</label>
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
+                            <input type="password" name="password" class="form-control" id="password"
+                                   placeholder="Password" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-control-feedback">
+                        <span class="text-danger align-middle">
+
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6" style="padding-top: .35rem">
+                    <div class="form-check mb-2 mr-sm-2 mb-sm-0">
+                        <label class="form-check-label">
+                            <input class="form-check-input" name="remember"
+                                   type="checkbox" >
+                            <span style="padding-bottom: .15rem">Remember me</span>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="padding-top: 1rem">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <button type="submit" class="btn btn-success"><i class="fa fa-sign-in"></i> Login</button>
+                    <a class="btn btn-link" href="/password/reset">Forgot Your Password?</a>
+                </div>
+            </div>
+        </form>
+    </div></div>
+<!--
+<header id="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" [routerLink]="['/']">
+            <img src="../../../assets/img/premate-logo.png" class="img-fluid" id="logo" alt="Responsive image">
+
+        </a> 
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        </div>
+    </nav>
+</header>
+<!--
+<header id="header">
+    <div class="navbar navbar-inverse">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+          <span class="sr-only">Toggle</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+  
+        <a class="navbar-brand" [routerLink]="['/']">
+          <img src="../../../assets/img/premate-logo.png" id="logo"> 
+        </a> 
+      </div>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="nav navbar-nav">
+          <li>
+              <a [routerLink]="['/']">
+                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                Home
+              </a>
+          </li>
+  
+          <li>
+              <a [routerLink]="['/']" *ngIf="identity && identity.sub">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                Tarea
+              </a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right"  *ngIf="!identity">
+          <li>
+              <a [routerLink]="['/']" >
+                Acceder
+              </a>   
+          </li>
+          <li>
+              <a [routerLink]="['/']">
+                Registro
+              </a>   
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right"  *ngIf="identity && identity.sub">
+          <li>
+            <a [routerLink]="[ '/' ]">
+              <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+              Ajustes
+            </a>
+          </li>
+  
+          <li>
+              <a [routerLink]="[ '/', 1 ]">
+                <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                Salir
+              </a>
+          </li>
+        </ul>
+  
+      </div>
+    </div>
+  </header>
+-->
