--- a/src/app/components/admin/adminVideo.component.html
+++ b/src/app/components/admin/adminVideo.component.html
@@ -53,7 +53,7 @@
                     <small class="form-text text-muted">Imagen perteneciente al video.</small>
                 </div>
                 <div class="form-group">
-                    <label for="file"><strong>Material adicional</strong></label><br>
+                    <label for="file"><strong>Material adicional</strong> (*Beta puede fallar si se utiliza)</label><br>
                     <!--<input type="file" (change)="subeImg($event)" class="form-control-file" #fileInput accept=".xml" multiple="true">-->
                     <input type="file" class="form-control" (change)="fileChangeMaterial($event)" name="materialVideo" #materialVideo="ngModel" [(ngModel)]="video.material" placeholder="Upload file video">
                     <small class="form-text text-muted">Imagen perteneciente al video.</small>
@@ -70,15 +70,15 @@
                       <tr>
                         <th scope="col">#</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Descripcion</th>
+                        <th scope="col">url</th>
                         <th scope="col">Accion</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let unidad of unidades">
-                        <th scope="row">1</th>
-                        <td>{{ unidad.nombre }}</td>
-                        <td>{{ unidad.descripcion }}</td>
+                      <tr *ngFor="let video of videos">
+                        <td></td>
+                        <td>{{ video.nombre }}</td>
+                        <td>{{ video.url }}</td>
                         <td></td>
                       </tr>
     
